workflow input/ouput schemas from config file
